packages/babel-parser/test/fixtures/experimental/structs/invalid-struct-sloppy-production/input.js
struct S {
  x = 01;
}
